<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ahto.com.kalkulaator.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr1"
        android:id="@+id/nr1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="64dp"
        android:onClick="buttonClicked"
        android:width="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr2"
        android:id="@+id/nr2"
        android:layout_alignTop="@+id/nr1"
        android:layout_toEndOf="@+id/nr1"
        android:onClick="buttonClicked"
        android:width="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr3"
        android:id="@+id/nr3"
        android:layout_alignTop="@+id/nr2"
        android:layout_toEndOf="@+id/nr2"
        android:onClick="buttonClicked"
        android:width="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr4"
        android:id="@+id/nr4"
        android:layout_above="@+id/nr1"
        android:layout_alignParentStart="true"
        android:onClick="buttonClicked"
        android:width="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr5"
        android:id="@+id/nr5"
        android:layout_alignTop="@+id/nr4"
        android:layout_toEndOf="@+id/nr4"
        android:onClick="buttonClicked"
        android:width="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr6"
        android:id="@+id/nr6"
        android:layout_alignTop="@+id/nr5"
        android:layout_toEndOf="@+id/nr5"
        android:onClick="buttonClicked"
        android:width="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr7"
        android:id="@+id/nr7"
        android:layout_above="@+id/nr4"
        android:layout_alignParentStart="true"
        android:onClick="buttonClicked"
        android:layout_alignTop="@+id/minus"
        android:width="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr8"
        android:id="@+id/nr8"
        android:layout_alignTop="@+id/nr7"
        android:layout_toEndOf="@+id/nr7"
        android:onClick="buttonClicked"
        android:width="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr9"
        android:id="@+id/nr9"
        android:layout_alignTop="@+id/nr8"
        android:layout_toEndOf="@+id/nr8"
        android:onClick="buttonClicked"
        android:width="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr0"
        android:id="@+id/nr0"
        android:layout_below="@+id/nr2"
        android:layout_alignParentStart="true"
        android:onClick="buttonClicked"
        android:width="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/plus"
        android:layout_above="@+id/nr9"
        android:layout_toEndOf="@+id/nr9"
        android:onClick="buttonClicked"
        android:height="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/minus"
        android:layout_above="@+id/nr6"
        android:layout_toEndOf="@+id/nr6"
        android:onClick="buttonClicked"
        android:height="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:id="@+id/multiply"
        android:onClick="buttonClicked"
        android:height="10dp"
        android:layout_below="@+id/minus"
        android:layout_alignStart="@+id/minus" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:id="@+id/divide"
        android:layout_below="@+id/nr6"
        android:layout_toEndOf="@+id/nr3"
        android:onClick="buttonClicked"
        android:height="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans"
        android:id="@+id/ans"
        android:layout_below="@+id/nr2"
        android:layout_toEndOf="@+id/nr1"
        android:width="176dp"
        android:onClick="buttonClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/C"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:onClick="buttonClicked"
        android:width="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_above="@+id/C"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:layout_alignEnd="@+id/plus" />

    <TextView
        android:id="@+id/textViewCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point"
        android:id="@+id/point"
        android:layout_alignTop="@+id/ans"
        android:layout_toEndOf="@+id/ans"
        android:width="30dp"
        android:height="10dp"
        android:onClick="buttonClicked" />
</RelativeLayout>
